--- a/sitepage/index.html
+++ b/sitepage/index.html
@@ -59,25 +59,43 @@
     </div>
   </div>
 
+<div class="wrapper">
 
-	<div class="wrapper">
-		<header>
-			<div class="header">
+	<header>
+		<nav class="navbar navbar-default header-color" role="navigation">
+		  <div class="container-fluid">
+		    <!-- Brand and toggle get grouped for better mobile display -->
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </button>
+		      <a class="navbar-brand" href="#">Brand</a>
+		    </div>
 
-				<div class="pull-left logo">The Underground</div>
+		    <!-- Collect the nav links, forms, and other content for toggling -->
+		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		      <form class="navbar-form navbar-right" role="search">
+		        <div class="form-group">
+		          <input type="text" class="form-control" placeholder="Search">
+		        </div>
+		        <button type="submit" class="btn btn-default">Submit</button>
+		      </form>
+		      <ul class="nav navbar-nav navbar-right">
+		        <li><a href="#">Home</a></li>
+		        <li><a href="#">About</a></li>
+		        <li><a href="#">Chat</a></li>
+		        <li><a href="#">Shop</a></li>
+		        
+		      </ul>
 
-				<div class="pull-right">
-					<ul>
-						<li><a href="">Home</a></li>
-						<li><a href="">About</a></li>
-						<li><a href="">Chat</a></li>
-						<li><a href="">Shop</a></li>
-						<li><input placeholder="Search..." class="form-control"></li>
-					</ul>
-				</div>
+		    </div><!-- /.navbar-collapse -->
+		  </div><!-- /.container-fluid -->
+		</nav>
+	</header>
 
-			</div>	
-		</header>
 
 		<section class="top-half">
 
