--- a/sitepage/profile.html
+++ b/sitepage/profile.html
@@ -74,7 +74,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand logo" href="#">The Underground</a>
+		      <a class="navbar-brand logo" href="index.html">The Underground</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -87,7 +87,7 @@
 		      </form>
 		      <ul class="nav navbar-nav navbar-right">
 		        <li><a href="index.html">Home</a></li>
-		        <li><a href="about.html">About</a></li>
+		        <li><a href="#">About</a></li>
 		        <li><a href="chat/index.php">Chat</a></li>
 		        <li><a href="#">Shop</a></li>
 		        
@@ -99,162 +99,48 @@
 	</header>
 
 
-		<section class="top-half">
+		<section>
+			 <div class="jumbotron crop about-img">
+			 	<div class="container">
+			 		<img src="images/fp3.jpg">
+			 	</div>
+			 </div>
 
-			<div class="col-md-9 crop">
-
-				 <!-- Carousel
-				 ================================================== -->
-			    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-			      <!-- Indicators -->
-			      <ol class="carousel-indicators">
-			        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-			        <li data-target="#myCarousel" data-slide-to="1"></li>
-			        <li data-target="#myCarousel" data-slide-to="2"></li>
-			      </ol>
-			      <div class="carousel-inner">
-			        <div class="item active">
-			          <img src="images/fp1.jpg" alt="First slide">
-			          <div class="container">
-			            <div class="carousel-caption">
-			             <!-- <h1>Example headline.</h1>
-			              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-			              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p> -->
-			            </div>
-			          </div>
-			        </div>
-			        <div class="item">
-			          <img src="images/fp2.jpg" alt="Second slide">
-			          <div class="container">
-			         <!-- <div class="carousel-caption">
-			              <h1>Another example headline.</h1>
-			              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-			              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-			            </div>-->
-			          </div>
-			        </div>
-			        <div class="item">
-			          <img src="images/fp3.jpg" alt="Third slide">
-			      <!--    <div class="container">
-			            <div class="carousel-caption">
-			              <h1>One more for good measure.</h1>
-			              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-			              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-			            </div>
-			          </div>-->
-			        </div>
-			      </div>
-			      <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-			      <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-			    </div><!-- /.carousel -->
-
-
-			</div>
-
-			<div class="col-md-3">
-
-				<form role="form">
-				  <div class="form-group">
-				    <label for="exampleInputEmail1">Email address</label>
-				    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-				  </div>
-				  <div class="form-group">
-				    <label for="exampleInputPassword1">Password</label>
-				    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-				  </div>
-				  <div>
-				  	<a href="">Forgot Password</a> | <a href="">Sign Up</a>
-				  </div>
-				  <button type="submit" class="btn btn-default">Submit</button>
-				</form>
-
-			</div>
 		</section>
 
-		<section class="clear bottom-half">
-			<div class="col-md-3 chat-icon">
-				<ol>
-					<h1>Active Rooms</h1>
-					<li><a href="">
-						<div class="hip-hop box"></div>
-						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
-						</div>
-					</a></li>
-					<li><a href="">
-						<div class="pop box"></div>
-						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
-						</div>
-					</a></li>
-					<li><a href="">
-						<div class="country box"></div>
-						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
-						</div>	
-					</a></li>
-					<li><a href="">
-						<div class="rap box"></div>
-						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
-						</div>	
-					</a></li>
-					<li><a href="">
-						<div class="rap box"></div>
-						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
-						</div>	
-					</a></li>
-				</ol>
+		<section class="clear profile">	
+			<div class="col-md-2">
+				<img src="images/dontehenley.jpg">
 			</div>
-			<div class="col-md-3 chat-icon">
-				<ol>
-					<h1>Popular Rooms</h1>
-					<li><a href="">
-						<div class="rap box"></div>
-						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
-						</div>	
-					</a></li>
-					<li><a href="">
-						<div class="rap box"></div>
-						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
-						</div>	
-					</a></li>
-					<li><a href="">
-						<div class="country box"></div>
-						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
-						</div>	
-					</a></li>
-					<li><a href="">
-						<div class="reggae box"></div>
-						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
-						</div>	
-					</a></li>
-					<li><a href="">
-						<div class="pop box"></div>
-						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
-						</div>	
-					</a></li>
-				</ol>
+			<div class="col-md-2">
+				<ul>
+					<li><h2>Donte Henley</h2></li>
+					<li>26, M</li>
+					<li>Wichita, KS</li>
+					<li>Hip-Hop</li>
+				</ul>
 			</div>
-			<div class="col-md-3 chat-icon">
+
+			<div class="col-md-5">
+				<div class="profile-info">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed nisi enim. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer aliquam purus lacus, in vehicula nisi aliquet nec. Nullam semper eros nunc, sit amet porttitor arcu varius eu. Suspendisse potenti. Pellentesque bibendum malesuada felis sit amet faucibus. Ut porttitor egestas urna, et commodo sapien semper eu. Aenean faucibus condimentum ligula, eu porttitor purus pretium vel. Phasellus a felis urna.
+					</p>			
+				</div>
+			</div>
+			<div class="col-md-3">
+				<p>
+					<button type="button" class="btn btn-primary btn-lg">Large button</button>
+					<button type="button" class="btn btn-primary btn-lg">Large button</button>
+					<button type="button" class="btn btn-primary btn-lg">Large button</button>
+					<button type="button" class="btn btn-primary btn-lg">Large button</button>
+				</p>
+			</div>
+		</section>
+		<section>
+			<div class="col-md-2 chat-icon profile-music">
+
 				<ol>
-					<h1>Newest Songs Added</h1>
+					
 					<li id="play_music">
 						<div class="rap box media"></div>
 						<div class="chat-info">
@@ -262,6 +148,7 @@
 							<p>City,ST</p>
 						</div>	
 					</li>
+					<h1>Songs</h1>
 					<li id="play_music">
 						<div class="rap box media"></div>
 						<div class="chat-info">
@@ -292,14 +179,54 @@
 					</li>
 				</ol>
 			</div>
-
-			<div class="col-md-3">
-				<a width="100%" height="400" class="twitter-timeline" href="https://twitter.com/stunt_crazy" data-widget-id="426524851503763456">Tweets by @stunt_crazy</a>
-				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
-
+			<div class="col-md-10">
+				<div class="comments">
+					<input type="comment" class="form-control comment-text" placeholder="Enter Comment....">
+					<button type="button" class="btn btn-primary btn-lg comment-submit">Large button</button>
+					<ul>
+						<li>
+							<div class="artist-icon img-circle"></div>
+							<div class="artist-comment">
+								<h2>Artist Name:</h2>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in feugiat urna. Nullam vel ipsum dapibus, porttitor odio ac, sagittis mauris. In id elit at sapien gravida mollis ac non felis. Suspendisse potenti. Nullam gravida dapibus nisi, sed dapibus mi adipiscing vitae. Suspendisse feugiat sagittis mauris, sed congue orci volutpat eget. 
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="user-icon img-circle"></div>
+							<div class="user-comment">
+								<h2>User Name:</h2>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in feugiat urna. Nullam vel ipsum dapibus, porttitor odio ac, sagittis mauris. In id elit at sapien gravida mollis ac non felis. Suspendisse potenti. Nullam gravida dapibus nisi, sed dapibus mi adipiscing vitae. Suspendisse feugiat sagittis mauris, sed congue orci volutpat eget. 
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="artist-icon img-circle"></div>
+							<div class="artist-comment">
+								<h2>Artist Name:</h2>
+								<p>
+									Whitney Jean:   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in feugiat urna. Nullam vel ipsum dapibus. 
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="user-icon img-circle"></div>
+							<div class="user-comment">
+								<h2>User Name:</h2>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in feugiat urna. Nullam vel ipsum dapibus. :  Visitor 2 
+								</p>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</div>
+
 		</section>
+
+
 		<footer>
 			<div class="footer">
 				<ul class="col-md-3 footer-col">
