media player integration

--- a/sitepage/about.html
+++ b/sitepage/about.html
@@ -87,9 +87,9 @@
 		      </form>
 		      <ul class="nav navbar-nav navbar-right">
 		        <li><a href="index.html">Home</a></li>
-		        <li><a href="#">About</a></li>
+		        <li><a href="about.html">About</a></li>
 		        <li><a href="chat/index.php">Chat</a></li>
-		        <li><a href="#">Shop</a></li>
+		        <li><a href="shop.html">Shop</a></li>
 		        
 		      </ul>
 
@@ -108,7 +108,7 @@
 
 		</section>
 
-		<section class="clear bottom-half thought">	
+		<section class="clear thought">	
 			<div class="col-md-3">
 				<img src="images/dontehenley.jpg">
 			</div>
@@ -121,19 +121,19 @@
 		</section>
 		<section class="benefits">
 			<h1>What Can you do?</h1>
-			<div class="col-md-6">
+			<div class="col-md-6 about-info">
 				<div class="user img-circle"></div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed nisi enim. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer aliquam purus lacus, in vehicula nisi aliquet nec. Nullam semper eros nunc, sit amet porttitor arcu varius eu. Suspendisse potenti. Pellentesque bibendum malesuada felis sit amet faucibus. Ut porttitor egestas urna, et commodo sapien semper eu. Aenean faucibus condimentum ligula, eu porttitor purus pretium vel. Phasellus a felis urna.
 				</p>			
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 about-info">
 				<div class="artist img-circle"></div>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed nisi enim. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer aliquam purus lacus, in vehicula nisi aliquet nec. Nullam semper eros nunc, sit amet porttitor arcu varius eu. Suspendisse potenti. Pellentesque bibendum malesuada felis sit amet faucibus. Ut porttitor egestas urna, et commodo sapien semper eu. Aenean faucibus condimentum ligula, eu porttitor purus pretium vel. Phasellus a felis urna.
 				</p>
 			</div>
 		</section>
-		<footer>
+		<footer class="about-footer">
 			<div class="footer">
 				<ul class="col-md-3 footer-col">
 					<h2>Sitemap</h2>
