--- a/sitepage/shop.html
+++ b/sitepage/shop.html
@@ -137,91 +137,96 @@
 			</div>
 		</section>
 		<section>
-			<div class="col-md-2 chat-icon profile-music">
+			<div class="col-md-12">
+				<ol class="shop-list shop-section">
+					<li>
+						<div class="shop-play"> </div>
+						<div class="shop-name"><h2>Name</h2></div>
+						<div class="shop-artist"><h2>Artist</h2></div>
+						<div class="shop-price"><h2>Price</h2></div>
+					</li>
+					<li>
+						<div class="shop-play"><img src="images/play11.png">  </div>
+						<div class="shop-name">Over the bridge</div>
+						<div class="shop-artist">Whitney Jean</div>
+						<div class="shop-price">
+							&#36;2.49
+							<button type="button" class="btn btn-primary btn-lg shop-btn">Buy</button>
+							<button type="button" class="btn btn-primary btn-lg shop-btn">Share</button>
+						</div>
+					</li>
+					<li>
+						<div class="shop-play"><img src="images/play11.png">  </div>
+						<div class="shop-name">Over the bridge</div>
+						<div class="shop-artist">Whitney Jean</div>
+						<div class="shop-price">
+							&#36;2.49
+							<button type="button" class="btn btn-primary btn-lg shop-btn">Buy</button>
+							<button type="button" class="btn btn-primary btn-lg shop-btn">Share</button>
+						</div>
+					</li>
+					<li>
+						<div class="shop-play"><img src="images/play11.png">  </div>
+						<div class="shop-name">Over the bridge</div>
+						<div class="shop-artist">Whitney Jean</div>
+						<div class="shop-price">
+							&#36;2.49
+							<button type="button" class="btn btn-primary btn-lg shop-btn">Buy</button>
+							<button type="button" class="btn btn-primary btn-lg shop-btn">Share</button>
+						</div>
+					</li>
+					<li>
+						<div class="shop-play"><img src="images/play11.png">  </div>
+						<div class="shop-name">Over the bridge</div>
+						<div class="shop-artist">Whitney Jean</div>
+						<div class="shop-price">
+							&#36;2.49
+							<button type="button" class="btn btn-primary btn-lg shop-btn">Buy</button>
+							<button type="button" class="btn btn-primary btn-lg shop-btn">Share</button>
+						</div>
+					</li>
+					<li>
+						<div class="shop-play"><img src="images/play11.png">  </div>
+						<div class="shop-name">Over the bridge</div>
+						<div class="shop-artist">Whitney Jean</div>
+						<div class="shop-price">
+							&#36;2.49
+							<button type="button" class="btn btn-primary btn-lg shop-btn">Buy</button>
+							<button type="button" class="btn btn-primary btn-lg shop-btn">Share</button>
+						</div>
+					</li>
+					<li>
+						<div class="shop-play"><img src="images/play11.png">  </div>
+						<div class="shop-name">Over the bridge</div>
+						<div class="shop-artist">Whitney Jean</div>
+						<div class="shop-price">
+							&#36;2.49
+							<button type="button" class="btn btn-primary btn-lg shop-btn">Buy</button>
+							<button type="button" class="btn btn-primary btn-lg shop-btn">Share</button>
+						</div>
+					</li>
+					<li>
+						<div class="shop-play"><img src="images/play11.png">  </div>
+						<div class="shop-name">Over the bridge</div>
+						<div class="shop-artist">Whitney Jean</div>
+						<div class="shop-price">
+							&#36;2.49
+							<button type="button" class="btn btn-primary btn-lg shop-btn">Buy</button>
+							<button type="button" class="btn btn-primary btn-lg shop-btn">Share</button>
+						</div>
+					</li>
+					<li>
+						<div class="shop-play"><img src="images/play11.png">  </div>
+						<div class="shop-name">Over the bridge</div>
+						<div class="shop-artist">Whitney Jean</div>
+						<div class="shop-price">
+							&#36;2.49
+							<button type="button" class="btn btn-primary btn-lg shop-btn">Buy</button>
+							<button type="button" class="btn btn-primary btn-lg shop-btn">Share</button>
+						</div>
+					</li>
 
-				<ol>
-					
-					<li id="play_music">
-						<div class="rap box media"></div>
-						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
-						</div>	
-					</li>
-					<h1>Songs</h1>
-					<li id="play_music">
-						<div class="rap box media"></div>
-						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
-						</div>	
-					</li>
-					<li id="play_music">
-						<div class="country box media"></div>
-						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
-						</div>	
-					</li>
-					<li id="play_music">
-						<div class="country box media"></div>
-						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
-						</div>	
-					</li>
-					<li id="play_music">
-						<div class="pop box media"></div>
-						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
-						</div>	
-					</li>
 				</ol>
-			</div>
-			<div class="col-md-10">
-				<div class="comments">
-					<input type="comment" class="form-control comment-text" placeholder="Enter Comment....">
-					<button type="button" class="btn btn-primary btn-lg comment-submit">Large button</button>
-					<ul>
-						<li>
-							<div class="artist-icon img-circle"></div>
-							<div class="artist-comment">
-								<h2>Artist Name:</h2>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in feugiat urna. Nullam vel ipsum dapibus, porttitor odio ac, sagittis mauris. In id elit at sapien gravida mollis ac non felis. Suspendisse potenti. Nullam gravida dapibus nisi, sed dapibus mi adipiscing vitae. Suspendisse feugiat sagittis mauris, sed congue orci volutpat eget. 
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="user-icon img-circle"></div>
-							<div class="user-comment">
-								<h2>User Name:</h2>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in feugiat urna. Nullam vel ipsum dapibus, porttitor odio ac, sagittis mauris. In id elit at sapien gravida mollis ac non felis. Suspendisse potenti. Nullam gravida dapibus nisi, sed dapibus mi adipiscing vitae. Suspendisse feugiat sagittis mauris, sed congue orci volutpat eget. 
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="artist-icon img-circle"></div>
-							<div class="artist-comment">
-								<h2>Artist Name:</h2>
-								<p>
-									Whitney Jean:   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in feugiat urna. Nullam vel ipsum dapibus. 
-								</p>
-							</div>
-						</li>
-						<li>
-							<div class="user-icon img-circle"></div>
-							<div class="user-comment">
-								<h2>User Name:</h2>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in feugiat urna. Nullam vel ipsum dapibus. :  Visitor 2 
-								</p>
-							</div>
-						</li>
-					</ul>
-				</div>
 			</div>
 
 		</section>
