--- a/sitepage/dashboard.html
+++ b/sitepage/dashboard.html
@@ -28,9 +28,9 @@
 			<li class="green"><a href="about.html"> About Page</a></li>
 			<li class="green"><a href="profile.html"> Profile Page</a></li>
 			<li class="green"><a href="shop.html"> Shop Page</a></li>
+			<li class="green"><a href="chat/index.php" > Chat Page</a></li>
 			<li class="yellow"><a href="media-test.html" > Music Player</a></li>
-			<li class="yellow"><a href="chat/index.php" > Chat Page</a></li>
-			<li class="grey"><a href="">Customize Chat Player</a></li>
+			<li class="yellow"><a href="chat/index.php">Customize Chat Player</a></li>
 			<li class="grey"><a href="">Log-In function</a></li>
 			<li class="grey"><a href="">Sign Up Page</a></li>
 			<li class="grey"><a href="">User Music Submission</a></li>
