--- a/sitepage/about.html
+++ b/sitepage/about.html
@@ -83,7 +83,6 @@
 		        <div class="form-group">
 		          <input type="text" class="form-control" placeholder="Search">
 		        </div>
-		        <button type="submit" class="btn btn-default">Submit</button>
 		      </form>
 		      <ul class="nav navbar-nav navbar-right">
 		        <li><a href="index.html">Home</a></li>
@@ -121,7 +120,7 @@
 		</section>
 		<section class="benefits">
 			<h1>What Can you do?</h1>
-			<div class="col-md-6 about-info">
+			<div class="col-md-6 about-info user-sect">
 				<div class="user img-circle"></div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed nisi enim. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer aliquam purus lacus, in vehicula nisi aliquet nec. Nullam semper eros nunc, sit amet porttitor arcu varius eu. Suspendisse potenti. Pellentesque bibendum malesuada felis sit amet faucibus. Ut porttitor egestas urna, et commodo sapien semper eu. Aenean faucibus condimentum ligula, eu porttitor purus pretium vel. Phasellus a felis urna.
 				</p>			
