--- a/sitepage/shop.html
+++ b/sitepage/shop.html
@@ -83,7 +83,7 @@
 		        <div class="form-group">
 		          <input type="text" class="form-control" placeholder="Search">
 		        </div>
-		        <button type="submit" class="btn btn-default">Submit</button>
+		        
 		      </form>
 		      <ul class="nav navbar-nav navbar-right">
 		        <li><a href="index.html">Home</a></li>
@@ -140,7 +140,7 @@
 			<div class="col-md-12">
 				<ol class="shop-list shop-section">
 					<li>
-						<div class="shop-play"> </div>
+						<div class="shop-play">Play </div>
 						<div class="shop-name"><h2>Name</h2></div>
 						<div class="shop-artist"><h2>Artist</h2></div>
 						<div class="shop-price"><h2>Price</h2></div>
@@ -150,9 +150,9 @@
 						<div class="shop-name">Over the bridge</div>
 						<div class="shop-artist">Whitney Jean</div>
 						<div class="shop-price">
-							&#36;2.49
-							<button type="button" class="btn btn-primary btn-lg shop-btn">Buy</button>
-							<button type="button" class="btn btn-primary btn-lg shop-btn">Share</button>
+							<p>&#36;2.49</p>
+							<button type="button" class="btn btn-primary btn-xs shop-btn">Buy</button>
+							<button type="button" class="btn btn-primary btn-xs shop-btn">Share</button>
 						</div>
 					</li>
 					<li>
@@ -160,9 +160,9 @@
 						<div class="shop-name">Over the bridge</div>
 						<div class="shop-artist">Whitney Jean</div>
 						<div class="shop-price">
-							&#36;2.49
-							<button type="button" class="btn btn-primary btn-lg shop-btn">Buy</button>
-							<button type="button" class="btn btn-primary btn-lg shop-btn">Share</button>
+							<p>&#36;2.49</p>
+							<button type="button" class="btn btn-primary btn-xs shop-btn">Buy</button>
+							<button type="button" class="btn btn-primary btn-xs shop-btn">Share</button>
 						</div>
 					</li>
 					<li>
@@ -170,9 +170,9 @@
 						<div class="shop-name">Over the bridge</div>
 						<div class="shop-artist">Whitney Jean</div>
 						<div class="shop-price">
-							&#36;2.49
-							<button type="button" class="btn btn-primary btn-lg shop-btn">Buy</button>
-							<button type="button" class="btn btn-primary btn-lg shop-btn">Share</button>
+							<p>&#36;2.49</p>
+							<button type="button" class="btn btn-primary btn-xs shop-btn">Buy</button>
+							<button type="button" class="btn btn-primary btn-xs shop-btn">Share</button>
 						</div>
 					</li>
 					<li>
@@ -180,9 +180,9 @@
 						<div class="shop-name">Over the bridge</div>
 						<div class="shop-artist">Whitney Jean</div>
 						<div class="shop-price">
-							&#36;2.49
-							<button type="button" class="btn btn-primary btn-lg shop-btn">Buy</button>
-							<button type="button" class="btn btn-primary btn-lg shop-btn">Share</button>
+							<p>&#36;2.49</p>
+							<button type="button" class="btn btn-primary btn-xs shop-btn">Buy</button>
+							<button type="button" class="btn btn-primary btn-xs shop-btn">Share</button>
 						</div>
 					</li>
 					<li>
@@ -190,9 +190,9 @@
 						<div class="shop-name">Over the bridge</div>
 						<div class="shop-artist">Whitney Jean</div>
 						<div class="shop-price">
-							&#36;2.49
-							<button type="button" class="btn btn-primary btn-lg shop-btn">Buy</button>
-							<button type="button" class="btn btn-primary btn-lg shop-btn">Share</button>
+							<p>&#36;2.49</p>
+							<button type="button" class="btn btn-primary btn-xs shop-btn">Buy</button>
+							<button type="button" class="btn btn-primary btn-xs shop-btn">Share</button>
 						</div>
 					</li>
 					<li>
@@ -200,9 +200,9 @@
 						<div class="shop-name">Over the bridge</div>
 						<div class="shop-artist">Whitney Jean</div>
 						<div class="shop-price">
-							&#36;2.49
-							<button type="button" class="btn btn-primary btn-lg shop-btn">Buy</button>
-							<button type="button" class="btn btn-primary btn-lg shop-btn">Share</button>
+							<p>&#36;2.49</p>
+							<button type="button" class="btn btn-primary btn-xs shop-btn">Buy</button>
+							<button type="button" class="btn btn-primary btn-xs shop-btn">Share</button>
 						</div>
 					</li>
 					<li>
@@ -210,9 +210,9 @@
 						<div class="shop-name">Over the bridge</div>
 						<div class="shop-artist">Whitney Jean</div>
 						<div class="shop-price">
-							&#36;2.49
-							<button type="button" class="btn btn-primary btn-lg shop-btn">Buy</button>
-							<button type="button" class="btn btn-primary btn-lg shop-btn">Share</button>
+							<p>&#36;2.49</p>
+							<button type="button" class="btn btn-primary btn-xs shop-btn">Buy</button>
+							<button type="button" class="btn btn-primary btn-xs shop-btn">Share</button>
 						</div>
 					</li>
 					<li>
@@ -220,9 +220,9 @@
 						<div class="shop-name">Over the bridge</div>
 						<div class="shop-artist">Whitney Jean</div>
 						<div class="shop-price">
-							&#36;2.49
-							<button type="button" class="btn btn-primary btn-lg shop-btn">Buy</button>
-							<button type="button" class="btn btn-primary btn-lg shop-btn">Share</button>
+							<p>&#36;2.49</p>
+							<button type="button" class="btn btn-primary btn-xs shop-btn">Buy</button>
+							<button type="button" class="btn btn-primary btn-xs shop-btn">Share</button>
 						</div>
 					</li>
 
