comp design match

--- a/sitepage/index.html
+++ b/sitepage/index.html
@@ -48,8 +48,7 @@
 		        <li><a href="about.html">About</a></li>
 		        <li><a href="chat/index.php">Chat</a></li>
 		        <li><a href="shop.html">Shop</a></li>
-		        <li><a href="index.html">Login</a></li>
-		        
+		        <li><a href="profile.html">Donte</a></li>
 		      </ul>
 
 		    </div><!-- /.navbar-collapse -->
@@ -134,39 +133,39 @@
 			<div class="col-md-3 chat-icon">
 				<ol>
 					<h1>Active Rooms</h1>
-					<li><a href="">
+					<li><a href="chat/index.php">
 						<div class="hip-hop box"></div>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>Hip-Hop</h2>
+							<p>Wichita, KS</p>
 						</div>
 					</a></li>
-					<li><a href="">
+					<li><a href="chat/index.php">
 						<div class="pop box"></div>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>Pop</h2>
+							<p>Los Angeles, CA</p>
 						</div>
 					</a></li>
-					<li><a href="">
+					<li><a href="chat/index.php">
 						<div class="country box"></div>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>Country</h2>
+							<p>Nashville, TN</p>
 						</div>	
 					</a></li>
-					<li><a href="">
+					<li><a href="chat/index.php">
 						<div class="rap box"></div>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>Rap</h2>
+							<p>New York City, NY</p>
 						</div>	
 					</a></li>
-					<li><a href="">
+					<li><a href="chat/index.php">
 						<div class="rap box"></div>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>Rap</h2>
+							<p>Kansas City, MO</p>
 						</div>	
 					</a></li>
 				</ol>
@@ -174,39 +173,39 @@
 			<div class="col-md-3 chat-icon">
 				<ol>
 					<h1>Popular Rooms</h1>
-					<li><a href="">
+					<li><a href="chat/index.php">
 						<div class="rap box"></div>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>Rap</h2>
+							<p>Dallas, TX</p>
 						</div>	
 					</a></li>
-					<li><a href="">
+					<li><a href="chat/index.php">
 						<div class="rap box"></div>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>Rap</h2>
+							<p>Pittsburg, PA</p>
 						</div>	
 					</a></li>
-					<li><a href="">
+					<li><a href="chat/index.php">
 						<div class="country box"></div>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>Country</h2>
+							<p>Nashville, TN</p>
 						</div>	
 					</a></li>
-					<li><a href="">
+					<li><a href="chat/index.php">
 						<div class="reggae box"></div>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>Reggae</h2>
+							<p>Queens, NY</p>
 						</div>	
 					</a></li>
-					<li><a href="">
+					<li><a href="chat/index.php">
 						<div class="pop box"></div>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>Pop</h2>
+							<p>Seattle, WA</p>
 						</div>	
 					</a></li>
 				</ol>
@@ -215,38 +214,39 @@
 				<ol>
 					<h1>Newest Songs Added</h1>
 					<li id="play_music">
+						<a href="javascript:;" id="myPlayButton">myPlayButton</a>
 						<div class="rap box media"></div>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>BBAS</h2>
+							<p>Big Sam</p>
 						</div>	
 					</li>
 					<li id="play_music">
 						<div class="rap box media"></div>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>Let it spill</h2>
+							Ol' Boy
 						</div>	
 					</li>
 					<li id="play_music">
 						<div class="country box media"></div>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>Cut him loose</h2>
+							Whitney Jean
 						</div>	
 					</li>
 					<li id="play_music">
 						<div class="country box media"></div>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>Big Truck</h2>
+							<p>Cowboy Rob</p>
 						</div>	
 					</li>
 					<li id="play_music">
 						<div class="pop box media"></div>
 						<div class="chat-info">
-							<h2>Genre</h2>
-							<p>City,ST</p>
+							<h2>Blue cups</h2>
+							<p>Sarah Hub</p>
 						</div>	
 					</li>
 				</ol>
@@ -263,10 +263,10 @@
 			<div class="footer">
 				<ul class="col-md-3 footer-col">
 					<h2>Sitemap</h2>
-					<li><a href="">Home</a></li>
-					<li><a href="">About</a></li>
-					<li><a href="">Chat</a></li>
-					<li><a href="">Shop</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="chat/index.php">Chat</a></li>
+					<li><a href="shop.html">Shop</a></li>
 				</ul>
 				<ul class="col-md-3 footer-col">
 					<h2>Contact</h2>
