--- a/sitepage/profile.html
+++ b/sitepage/profile.html
@@ -89,7 +89,7 @@
 		        <li><a href="about.html">About</a></li>
 		        <li><a href="chat/index.php">Chat</a></li>
 		        <li><a href="shop.html">Shop</a></li>
-		        <li><a href="index.html">Login</a></li>
+		        <li><a href="profile.html">Donte</a></li>
 		      </ul>
 
 		    </div><!-- /.navbar-collapse -->
@@ -128,7 +128,7 @@
 			</div>
 			<div class="col-md-3">
 				<p>
-					<button type="button" class="btn btn-primary btn-lg">Follow</button>
+					<button type="button" class="btn btn-primary btn-lg">+Follow</button>
 					<button type="button" class="btn btn-primary btn-lg">Share</button>
 					<button type="button" class="btn btn-primary btn-lg">Favorite</button>
 					<button type="button" class="btn btn-primary btn-lg">Message</button>
@@ -230,10 +230,10 @@
 			<div class="footer">
 				<ul class="col-md-3 footer-col">
 					<h2>Sitemap</h2>
-					<li><a href="">Home</a></li>
-					<li><a href="">About</a></li>
-					<li><a href="">Chat</a></li>
-					<li><a href="">Shop</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="chat/index.php">Chat</a></li>
+					<li><a href="shop.html">Shop</a></li>
 				</ul>
 				<ul class="col-md-3 footer-col">
 					<h2>Contact</h2>
