custom media player

--- a/sitepage/index.html
+++ b/sitepage/index.html
@@ -211,39 +211,59 @@
 				</ol>
 			</div>
 			<div class="col-md-3 chat-icon">
+				
 				<ol>
 					<h1>Newest Songs Added</h1>
 					<li id="play_music">
-						<a href="javascript:;" id="myPlayButton">myPlayButton</a>
-						<div class="rap box media"></div>
+						<div id="jquery_jplayer_2"></div>
+						<div id="jp_container_1">
+							<a href="#" class="jp-play"><div class="rap box media"></div></a>
+							<a href="#" class="jp-pause"><div class="rap box media-pause"></div></a>
+						</div>
 						<div class="chat-info">
 							<h2>BBAS</h2>
 							<p>Big Sam</p>
 						</div>	
 					</li>
 					<li id="play_music">
-						<div class="rap box media"></div>
+						<div id="jquery_jplayer_2"></div>
+						<div id="jp_container_1">
+							<a href="#" class="jp-play"><div class="rap box media"></div></a>
+							<a href="#" class="jp-pause"><div class="rap box media-pause"></div></a>
+						</div>
 						<div class="chat-info">
 							<h2>Let it spill</h2>
 							Ol' Boy
 						</div>	
 					</li>
 					<li id="play_music">
-						<div class="country box media"></div>
+						<div id="jquery_jplayer_2"></div>
+						<div id="jp_container_1">
+							<a href="#" class="jp-play"><div class="country box media"></div></a>
+							<a href="#" class="jp-pause"><div class="country box media-pause"></div></a>
+						</div>
 						<div class="chat-info">
 							<h2>Cut him loose</h2>
 							Whitney Jean
 						</div>	
 					</li>
 					<li id="play_music">
-						<div class="country box media"></div>
+						<div id="jquery_jplayer_2"></div>
+						<div id="jp_container_1">
+							<a href="#" class="jp-play"><div class="country box media"></div></a>
+							<a href="#" class="jp-pause"><div class="country box media-pause"></div></a>
+						</div>
 						<div class="chat-info">
 							<h2>Big Truck</h2>
 							<p>Cowboy Rob</p>
 						</div>	
 					</li>
 					<li id="play_music">
-						<div class="pop box media"></div>
+						<div id="jquery_jplayer_2"></div>
+						<div id="jp_container_1">
+							<a href="#" class="jp-play"><div class="pop box media"></div></a>
+							<a href="#" class="jp-pause"><div class="pop box media-pause"></div></a>
+						</div>
 						<div class="chat-info">
 							<h2>Blue cups</h2>
 							<p>Sarah Hub</p>
