--- a/sitepage/profile.html
+++ b/sitepage/profile.html
@@ -122,7 +122,7 @@
 
 			<div class="col-md-5">
 				<div class="profile-info">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed nisi enim. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer aliquam purus lacus, in vehicula nisi aliquet nec. Nullam semper eros nunc, sit amet porttitor arcu varius eu. Suspendisse potenti. Pellentesque bibendum malesuada felis sit amet faucibus. Ut porttitor egestas urna, et commodo sapien semper eu. Aenean faucibus condimentum ligula, eu porttitor purus pretium vel. Phasellus a felis urna.
+					<p> Hi, My name is Donte Henley and I'm an indpendent artist based out of Wichita, KS. I have been rapping for 10 years and really hope you like my sound.
 					</p>			
 				</div>
 			</div>
