--- a/sitepage/dashboard.html
+++ b/sitepage/dashboard.html
@@ -29,10 +29,10 @@
 			<li class="green"><a href="profile.html"> Profile Page</a></li>
 			<li class="green"><a href="shop.html"> Shop Page</a></li>
 			<li class="green"><a href="chat/index.php" > Chat Page</a></li>
-			<li class="yellow"><a href="media-test.html" > Music Player</a></li>
+			<li class="yellow"><a href="index.html" > Music Player</a></li>
 			<li class="yellow"><a href="chat/index.php">Customize Chat Player</a></li>
-			<li class="grey"><a href="">Log-In function</a></li>
-			<li class="grey"><a href="">Sign Up Page</a></li>
+			<li class="yellow"><a href="">Log-In function</a></li>
+			<li class="yellow"><a href="">Sign Up Page</a></li>
 			<li class="grey"><a href="">User Music Submission</a></li>
 			<li class="grey"><a href="">Create Dynamic Profile Page</a></li>
 			<li class="grey"><a href="">Create Dynamic Home Page</a></li>
