--- a/sitepage/dashboard.html
+++ b/sitepage/dashboard.html
@@ -24,12 +24,12 @@
 			<li class="green"><a href="style-guide.png" target="_blank"> Style Guide</a></li>
 			<li class="green"><a href="TheUnderground-wf.pdf" target="_blank"> Wireframe</a></li>
 			<li class="green"><a href="TheUnderground-designComp.pdf" target="_blank"> Composite Design</a></li>
-			<li class="green"><a href="index.html"> Home Page</a></li>
-			<li class="green"><a href="about.html"> About Page</a></li>
-			<li class="green"><a href="profile.html"> Profile Page</a></li>
-			<li class="green"><a href="shop.html"> Shop Page</a></li>
+			<li class="green"><a href="index.php"> Home Page</a></li>
+			<li class="green"><a href="about.php"> About Page</a></li>
+			<li class="green"><a href="profile.php"> Profile Page</a></li>
+			<li class="green"><a href="shop.php"> Shop Page</a></li>
 			<li class="green"><a href="chat/index.php" > Chat Page</a></li>
-			<li class="yellow"><a href="index.html" > Music Player</a></li>
+			<li class="yellow"><a href="index.php" > Music Player</a></li>
 			<li class="yellow"><a href="chat/index.php">Customize Chat Player</a></li>
 			<li class="yellow"><a href="">Log-In function</a></li>
 			<li class="yellow"><a href="">Sign Up Page</a></li>
