--- a/sitepage/dashboard.html
+++ b/sitepage/dashboard.html
@@ -31,7 +31,7 @@
 			<li class="green"><a href="chat/index.php" > Chat Page</a></li>
 			<li class="yellow"><a href="index.php" > Music Player</a></li>
 			<li class="yellow"><a href="chat/index.php">Customize Chat Player</a></li>
-			<li class="yellow"><a href="">Log-In function</a></li>
+			<li class="green"><a href="">Log-In function</a></li>
 			<li class="yellow"><a href="">Sign Up Page</a></li>
 			<li class="grey"><a href="">User Music Submission</a></li>
 			<li class="grey"><a href="">Create Dynamic Profile Page</a></li>
