--- a/sitepage/dashboard.html
+++ b/sitepage/dashboard.html
@@ -29,16 +29,16 @@
 			<li class="green"><a href="profile.php"> Profile Page</a></li>
 			<li class="green"><a href="shop.php"> Shop Page</a></li>
 			<li class="green"><a href="chat/index.php" > Chat Page</a></li>
-			<li class="yellow"><a href="index.php" > Music Player</a></li>
-			<li class="yellow"><a href="chat/index.php">Customize Chat Player</a></li>
-			<li class="green"><a href="">Log-In function</a></li>
-			<li class="yellow"><a href="">Sign Up Page</a></li>
-			<li class="grey"><a href="">User Music Submission</a></li>
-			<li class="grey"><a href="">Create Dynamic Profile Page</a></li>
-			<li class="grey"><a href="">Create Dynamic Home Page</a></li>
-			<li class="grey"><a href="">Link Shop Page To Paypal</a></li>
-			<li class="grey"><a href="">Error Debugging</a></li>
-			<li class="grey"><a href="">Run Beta</a></li>
+			<li class="red"><a href="index.php" > Music Player</a></li>
+			<li class="green"><a href="chat/index.php">Customize Chat Player</a></li>
+			<li class="green"><a href="index.php">Log-In function</a></li>
+			<li class="green"><a href="signup.php">Sign Up Page</a></li>
+			<li class="red"><a href="">User Music Submission</a></li>
+			<li class="green"><a href="index.php">Create Dynamic Profile Page</a></li>
+			<li class="green"><a href="index.php">Create Dynamic Home Page</a></li>
+			<li class="red"><a href="">Link Shop Page To Paypal</a></li>
+			<li class="yellow"><a href="">Error Debugging</a></li>
+			<li class="yellow"><a href="">Run Beta</a></li>
 
 		</ol>
 	</div>
