--- a/sitepage/dashboard.html
+++ b/sitepage/dashboard.html
@@ -36,8 +36,8 @@
 			<li class="green"><a href="">User Music Submission</a></li>
 			<li class="green"><a href="index.php">Create Dynamic Profile Page</a></li>
 			<li class="green"><a href="index.php">Create Dynamic Home Page</a></li>
-			<li class="yellow"><a href="">Error Debugging</a></li>
-			<li class="yellow"><a href="">Run Beta</a></li>
+			<li class="green"><a href="">Error Reporting</a></li>
+			<li class="green"><a href="">Run Beta</a></li>
 
 		</ol>
 	</div>
